@@ -1,4 +1,5 @@
 # next
+- Fixes Play button of current song in queue restarts song instead of resuming
 - Fixes keyboard shortcuts not working for "random" and "consume"
 - Replaces "random" and "consume" labels with shortcuts in narrow view
 
